# Development

./: README.md
python_resources/: Quanser_final.py  coordinate_mapping.py  mpc_traj.py  my_roadmap.py
python_resources/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
python_resources/log/: latest_build
python_resources/roadmap/: path_planning_example.py
python_resources/trajactories/: test_spline.npy  waypoints.npy
ros2/Parameters/: slam_localization_params.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
ros2/install/: setup.sh
ros2/install/qcar2_autonomy/lib/qcar2_autonomy/: ekf_node  imu_odom  kmpc_node  lqr  mpc_node  odom_pub  path_pub  pure_pursuit  stanley_node
ros2/install/qcar2_cpp/lib/qcar2_cpp/: ekf_node
ros2/log/: latest_build
ros2/maps/: MY_MAP.pgm  MY_MAP.yaml  ORIGIN2.pgm  ORIGIN2.yaml  ORIGIN_MAP.pgm  ORIGIN_MAP.yaml
ros2/rviz/: mpc.rviz  pp_config.rviz
ros2/src/qcar2_autonomy/: package.xml  setup.py
ros2/src/qcar2_autonomy/autonomy/: ekf_pose.py  imu_odom.py  kmpc.py  lqr.py  mpc.py  nav_to_pose.py  odom_pub.py  path_publisher.py  pure_pursuit.py  stanley.py  yolo_detector.py
ros2/src/qcar2_autonomy/launch/: my_autonomy_launch.py
ros2/src/qcar2_cpp/: CMakeLists.txt  package.xml
ros2/src/qcar2_cpp/src/: ekf_node.cpp
ros2/src/qcar2_nodes/config/: async_slam_param.yaml  my_cartographer.lua
ros2/src/qcar2_nodes/launch/: my_file_launch.py  qcar2_cartographer_virtual_launch.py  qcar2_virtual_launch.py
ros2/src/qcar2_nodes/src/: fixed_lidar_frame.cpp  fixed_lidar_frame_virtual.cpp  lidar.cpp
(+131 files in other folders)
